Added sample with csv serialization
Signed-off-by: Andrii <tsap.andriy@gmail.com>

--- a/aspnet5-angular2-typescript/src/ConsoleApp1/project.json
+++ b/aspnet5-angular2-typescript/src/ConsoleApp1/project.json
@@ -11,7 +11,8 @@
       "type": "platform",
       "version": "1.0.1"
     },
-    "PhotoGallery": "2.0.0-*"
+    "PhotoGallery": "2.0.0-*",
+    "ServiceStack.Text.Core": "1.0.23"
   },
 
   "frameworks": {
