Started to working on xml serialization and loggining
Signed-off-by: Andrii <tsap.andriy@gmail.com>

--- a/aspnet5-angular2-typescript/src/ConsoleApp1/project.json
+++ b/aspnet5-angular2-typescript/src/ConsoleApp1/project.json
@@ -11,8 +11,11 @@
       "type": "platform",
       "version": "1.0.1"
     },
+    "Microsoft.VisualStudio.Validation": "12.0.0",
     "PhotoGallery": "2.0.0-*",
-    "ServiceStack.Text.Core": "1.0.23"
+    "ServiceStack.Text.Core": "1.0.23",
+    "System.Xml.XmlSerializer": "4.0.11",
+    "Validation": "2.3.7"
   },
 
   "frameworks": {
