--- a/aspnet5-angular2-typescript/src/ConsoleApp1/appsettings.json
+++ b/aspnet5-angular2-typescript/src/ConsoleApp1/appsettings.json
@@ -4,10 +4,10 @@
       "ConnectionString": "Server = (localdb)\\MSSQLLocalDB; Database = PhotoGalery; Trusted_Connection = True; MultipleActiveResultSets = true"
     },
     "XmlFiles": {
-      "UserFilePath": "Data//User.xml",
-      "GroupFilePath": "Data//Group.xml",
-      "MessageFilePath": "Data//Message.xml",
-      "GroupUserFilePath": "Data//GroupUser.xml"
+      "UserFilePath": "Data\\User.xml",
+      "GroupFilePath": "Data\\Group.xml",
+      "MessageFilePath": "Data\\Message.xml",
+      "GroupUserFilePath": "Data\\GroupUser.xml"
     }
     
   }
