--- a/aspnet5-angular2-typescript/src/ConsoleApp1/project.json
+++ b/aspnet5-angular2-typescript/src/ConsoleApp1/project.json
@@ -7,14 +7,15 @@
   "dependencies": {
     "Microsoft.EntityFrameworkCore": "1.0.1",
     "Microsoft.EntityFrameworkCore.SqlServer": "1.0.1",
-    "Microsoft.NETCore.App": {
-      "type": "platform",
-      "version": "1.0.1"
-    },
+    "Microsoft.NETCore.App": "1.0.1",
     "PhotoGallery": "2.0.0-*",
     "ServiceStack.Text.Core": "1.0.23",
     "System.Xml.XmlSerializer": "4.0.11",
     "Validation": "2.3.7"
+  },
+
+  "runtimes": {
+    "win10-x64": {}
   },
 
   "frameworks": {
