--- a/aspnet5-angular2-typescript/src/AdminkaTests2/project.json
+++ b/aspnet5-angular2-typescript/src/AdminkaTests2/project.json
@@ -10,13 +10,14 @@
       "type": "platform",
       "version": "1.0.1"
     },
+    "Moq": "4.6.36-alpha",
     "NUnit": "3.5.0",
     "NUnitLite": "3.5.0"
   },
 
-  "runtimes": {
-    "win10-x64": {}
-  },
+  //"runtimes": {
+  //  "win10-x64": {}
+  //},
 
   "frameworks": {
     "netcoreapp1.0": {
