Most changes because of renaming namespaces in API other - some refactoring
Signed-off-by: Andrii <tsap.andriy@gmail.com>

--- a/aspnet5-angular2-typescript/src/AdminkaTests2/appsettings.json
+++ b/aspnet5-angular2-typescript/src/AdminkaTests2/appsettings.json
@@ -5,7 +5,7 @@
     },
     "XmlFiles": {
       "UserFilePath": "Data\\User.xml",
-      "GroupFilePath": "Data\\Group.xml",
+      "GroupFilePath": "Data\\Chat.xml",
       "MessageFilePath": "Data\\Message.xml",
       "GroupUserFilePath": "Data\\GroupUser.xml"
     }
