--- a/aspnet5-angular2-typescript/src/PhotoGallery/project.json
+++ b/aspnet5-angular2-typescript/src/PhotoGallery/project.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "AutoMapper.Data": "1.0.0-beta1",
     "Microsoft.AspNetCore.Authentication.Cookies": "1.0.0",
+    "Microsoft.AspNetCore.Authentication.JwtBearer": "1.0.0",
     "Microsoft.AspNetCore.Diagnostics": "1.0.0",
     "Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore": "1.0.0",
     "Microsoft.AspNetCore.Identity": "1.0.0",
@@ -30,12 +31,10 @@
     "Microsoft.Extensions.Configuration.UserSecrets": "1.0.0",
     "Microsoft.Extensions.FileProviders.Physical": "1.0.0",
     //"Microsoft.NETCore.App":{"version": "1.0.1", "type" : "platform" },
-
     "Microsoft.NETCore.App": {
       "version": "1.0.0",
       "type": "platform"
     }
-
   },
 
   "tools": {
