I thought that i finally did token based login and its token can be used in API methods also renamed groups to chats in entities and repositories, added temporary user entity also migrated and updated db in accordance with new dbset and entities
Signed-off-by: Andrii <tsap.andriy@gmail.com>

--- a/aspnet5-angular2-typescript/src/PhotoGallery/Properties/launchSettings.json
+++ b/aspnet5-angular2-typescript/src/PhotoGallery/Properties/launchSettings.json
@@ -3,21 +3,20 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:9823/",
+      "applicationUrl": "http://localhost:5000/",
       "sslPort": 0
     }
   },
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchUrl": "http://localhost:9823/#/home",
+      "launchUrl": "http://localhost:9823/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "$safeprojectname$": {
       "commandName": "Project",
-      "launchBrowser": true,
       "launchUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
