--- a/aspnet5-angular2-typescript/src/PhotoGallery/Properties/launchSettings.json
+++ b/aspnet5-angular2-typescript/src/PhotoGallery/Properties/launchSettings.json
@@ -3,14 +3,15 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:5000/",
+      "applicationUrl": "http://localhost:9823/",
       "sslPort": 0
     }
   },
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchUrl": "http://localhost:9823/",
+      "launchBrowser": true,
+      "launchUrl": "http://localhost:9823/#/home",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
