--- a/aspnet5-angular2-typescript/src/PhotoGallery/package.json
+++ b/aspnet5-angular2-typescript/src/PhotoGallery/package.json
@@ -2,7 +2,8 @@
   "version": "1.0.0",
   "name": "ASP.NET",
   "scripts": {
-    "postinstall": "typings install"
+    "postinstall": "typings install",
+    "gulp": "gulp"
   },
   "licenses": [
     {
@@ -22,13 +23,11 @@
     "@angular/router": "~3.1.1",
     "@angular/upgrade": "~2.1.1",
     "angular-in-memory-web-api": "~0.1.13",
-    
     "body-parser": "1.14.1",
     "bootstrap": "3.3.5",
     "es6-shim": "^0.35.0",
     "fancybox": "3.0.0",
     "jquery": "2.1.4",
-
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
