--- a/aspnet5-angular2-typescript/src/APITests/project.json
+++ b/aspnet5-angular2-typescript/src/APITests/project.json
@@ -1,22 +1,19 @@
 ﻿{
-  "version": "1.0.0-*",
+  "version": "1.1.0-*",
   "buildOptions": {
     "emitEntryPoint": true
   },
 
   "dependencies": {
-    "PhotoGallery": "2.0.0-*",
-    "Microsoft.NETCore.App": {
-      "type": "platform",
-      "version": "1.0.1"
-    },
+    "PhotoGallery": "1.1.0-*",
     "Moq": "4.6.38-alpha",
     "NUnit": "3.5.0",
-    "NUnitLite": "3.5.0"
+    "NUnitLite": "3.5.0",
+    "Microsoft.NETCore.App": "1.1.0"
   },
 
   "frameworks": {
-    "netcoreapp1.0": {
+    "netcoreapp1.1": {
       "imports": "dnxcore50"
     }
   }
