--- a/aspnet5-angular2-typescript/src/PhotoGallery/.vscode/tasks.json
+++ b/aspnet5-angular2-typescript/src/PhotoGallery/.vscode/tasks.json
@@ -7,7 +7,7 @@
         {
             "taskName": "build",
             "args": [
-                "${workspaceRoot}\\project.json"
+                "C:\\Users\\pilor\\Desktop\\EleksCamp\\Slowpoke\\aspnet5-angular2-typescript\\src\\PhotoGallery\\project.json"
             ],
             "isBuildCommand": true,
             "problemMatcher": "$msCompile"
