--- a/aspnet5-angular2-typescript/src/PhotoGallery/package.json
+++ b/aspnet5-angular2-typescript/src/PhotoGallery/package.json
@@ -1,50 +1,44 @@
 {
-  "version": "1.0.0",
-  "name": "ASP.NET",
-  "scripts": {
-    "postinstall": "typings install",
-    "gulp": "gulp"
-  },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/angular/angular.io/blob/master/LICENSE"
+    "version": "1.0.0",
+    "name": "photogallery",
+    "author": "Chris Sakellarios",
+    "license": "MIT",
+    "private": true,
+    "dependencies": {
+      "@angular/common": "~2.2.0",
+      "@angular/compiler": "~2.2.0",
+      "@angular/core": "~2.2.0",
+      "@angular/forms": "~2.2.0",
+      "@angular/http": "~2.2.0",
+      "@angular/platform-browser": "~2.2.0",
+      "@angular/platform-browser-dynamic": "~2.2.0",
+      "@angular/router": "~3.2.0",
+      "@angular/upgrade": "~2.2.0",
+
+      "body-parser": "1.14.1",
+      "bootstrap": "3.3.5",
+      "es6-shim": "^0.35.0",
+      "fancybox": "3.0.0",
+      "jquery": "2.1.4",
+
+      "angular-in-memory-web-api": "~0.1.15",
+      "core-js": "^2.4.1",
+      "reflect-metadata": "^0.1.8",
+      "rxjs": "5.0.0-beta.12",
+      "systemjs": "0.19.39",
+      "zone.js": "^0.6.25"
+    },
+    "devDependencies": {
+      "@types/node": "^6.0.45",
+      "del": "2.1.0",
+      "gulp": "3.9.1",
+      "gulp-typescript": "3.1.3",
+      "gulp-watch": "4.3.11",
+      "merge": "1.2.0",
+      "typescript": "^2.0.10",
+      "typings": "^1.3.3"
+    },
+    "scripts": {
+      "postinstall": "typings install"
     }
-  ],
-  "private": true,
-  "dependencies": {
-    "@angular/common": "~2.1.1",
-    "@angular/compiler": "~2.1.1",
-    "@angular/core": "~2.1.1",
-    "@angular/forms": "~2.1.1",
-    "@angular/http": "~2.1.1",
-    "@angular/platform-browser": "~2.1.1",
-    "@angular/platform-browser-dynamic": "~2.1.1",
-    "@angular/router": "~3.1.1",
-    "@angular/upgrade": "~2.1.1",
-    "angular-in-memory-web-api": "~0.1.13",
-    "body-parser": "1.14.1",
-    "bootstrap": "3.3.5",
-    "es6-shim": "^0.35.0",
-    "fancybox": "3.0.0",
-    "jquery": "2.1.4",
-    "core-js": "^2.4.1",
-    "reflect-metadata": "^0.1.8",
-    "rxjs": "5.0.0-beta.12",
-    "systemjs": "0.19.39",
-    "zone.js": "^0.6.25"
-  },
-  "devDependencies": {
-    "del": "2.1.0",
-    "gulp": "3.9.0",
-    "gulp-typescript": "^2.13.4",
-    "gulp-watch": "4.3.5",
-    "merge": "1.2.0",
-    "typings": "^1.3.3",
-    "@types/core-js": "^0.9.34",
-    "@types/node": "^6.0.45",
-    "concurrently": "^3.0.0",
-    "lite-server": "^2.2.2",
-    "typescript": "^2.0.3"
-  }
 }
