fixed bug "No target platform" by set framework type:"platform" to all project.json
Signed-off-by: Andrii <tsap.andriy@gmail.com>

--- a/aspnet5-angular2-typescript/src/AdminkaTests2/project.json
+++ b/aspnet5-angular2-typescript/src/AdminkaTests2/project.json
@@ -6,7 +6,10 @@
 
   "dependencies": {
     "ConsoleApp1": "1.1.0-*",
-    "Microsoft.NETCore.App": "1.1.0",
+    "Microsoft.NETCore.App": {
+      "version": "1.1.0",
+      "type": "platform"
+    },
     "Moq": "4.6.36-alpha",
     "NUnit": "3.5.0",
     "NUnitLite": "3.5.0"
