--- a/aspnet5-angular2-typescript/src/APITests/project.json
+++ b/aspnet5-angular2-typescript/src/APITests/project.json
@@ -9,7 +9,10 @@
     "Moq": "4.6.38-alpha",
     "NUnit": "3.5.0",
     "NUnitLite": "3.5.0",
-    "Microsoft.NETCore.App": "1.1.0"
+    "Microsoft.NETCore.App": {
+      "version": "1.1.0",
+      "type": "platform"
+    }
   },
 
   "frameworks": {
