--- a/aspnet5-angular2-typescript/src/ConsoleApp1/project.json
+++ b/aspnet5-angular2-typescript/src/ConsoleApp1/project.json
@@ -8,7 +8,10 @@
   "dependencies": {
     "Microsoft.EntityFrameworkCore": "1.1.0",
     "Microsoft.EntityFrameworkCore.SqlServer": "1.1.0",
-    "Microsoft.NETCore.App": "1.1.0",
+    "Microsoft.NETCore.App": {
+      "version": "1.1.0",
+      "type": "platform"
+    },
     "PhotoGallery": "1.1.0-*",
     "ServiceStack.Text.Core": "1.0.30",
     "System.Xml.XmlSerializer": "4.3.0",
