--- a/aspnet5-angular2-typescript/src/PhotoGallery/project.json
+++ b/aspnet5-angular2-typescript/src/PhotoGallery/project.json
@@ -30,7 +30,10 @@
     "Microsoft.Extensions.Configuration.Json": "1.1.0",
     "Microsoft.Extensions.Configuration.UserSecrets": "1.1.0",
     "Microsoft.Extensions.FileProviders.Physical": "1.1.0",
-    "Microsoft.NETCore.App": "1.1.0"
+    "Microsoft.NETCore.App": {
+      "version": "1.1.0",
+      "type": "platform"
+    }
   },
 
   "tools": {
