--- a/aspnet5-angular2-typescript/src/PhotoGallery/package.json
+++ b/aspnet5-angular2-typescript/src/PhotoGallery/package.json
@@ -3,7 +3,11 @@
   "name": "ASP.NET",
   "scripts": {
     "postinstall": "typings install",
-    "gulp": "gulp"
+    "gulp": "gulp",
+    "start": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
+    "lite": "lite-server",
+    "tsc": "tsc",
+    "tsc:w": "tsc -w"
   },
   "licenses": [
     {
@@ -35,16 +39,17 @@
     "zone.js": "^0.6.25"
   },
   "devDependencies": {
-    "del": "2.1.0",
-    "gulp": "3.9.0",
-    "gulp-typescript": "^2.13.4",
-    "gulp-watch": "4.3.5",
-    "merge": "1.2.0",
-    "typings": "^1.3.3",
     "@types/core-js": "^0.9.34",
     "@types/node": "^6.0.45",
     "concurrently": "^3.0.0",
+    "del": "2.1.0",
+    "gulp": "3.9.1",
+    "gulp-livereload": "^3.8.1",
+    "gulp-typescript": "^2.13.4",
+    "gulp-watch": "4.3.5",
     "lite-server": "^2.2.2",
-    "typescript": "^2.0.3"
+    "merge": "1.2.0",
+    "typescript": "^2.0.3",
+    "typings": "^1.3.3"
   }
 }
