--- a/aspnet5-angular2-typescript/src/PhotoGallery/.vscode/launch.json
+++ b/aspnet5-angular2-typescript/src/PhotoGallery/.vscode/launch.json
@@ -2,16 +2,35 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": ".NET Core Launch (console)",
+            "name": ".NET Core Launch (web)",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "C:\\Users\\pilor\\Desktop\\EleksCamp\\Slowpoke\\aspnet5-angular2-typescript\\src\\PhotoGallery\\bin\\Debug\\netcoreapp1.0\\PhotoGallery.dll",
+            "program": "${workspaceRoot}/bin/Debug/netcoreapp1.1/PhotoGallery.dll",
             "args": [],
-            "cwd": "C:\\Users\\pilor\\Desktop\\EleksCamp\\Slowpoke\\aspnet5-angular2-typescript\\src\\PhotoGallery",
-            "externalConsole": false,
+            "cwd": "${workspaceRoot}",
             "stopAtEntry": false,
-            "internalConsoleOptions": "openOnSessionStart"
+            "internalConsoleOptions": "openOnSessionStart",
+            "launchBrowser": {
+                "enabled": true,
+                "args": "${auto-detect-url}",
+                "windows": {
+                    "command": "cmd.exe",
+                    "args": "/C start ${auto-detect-url}"
+                },
+                "osx": {
+                    "command": "open"
+                },
+                "linux": {
+                    "command": "xdg-open"
+                }
+            },
+            "env": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            },
+            "sourceFileMap": {
+                "/Views": "${workspaceRoot}/Views"
+            }
         },
         {
             "name": ".NET Core Attach",
