--- a/aspnet5-angular2-typescript/src/PhotoGallery/package.json
+++ b/aspnet5-angular2-typescript/src/PhotoGallery/package.json
@@ -27,6 +27,7 @@
     "@angular/router": "~3.1.1",
     "@angular/upgrade": "~2.1.1",
     "angular-in-memory-web-api": "~0.1.13",
+    "bower": "1.8.0",
     "body-parser": "1.14.1",
     "bootstrap": "3.3.5",
     "es6-shim": "^0.35.0",
@@ -35,6 +36,7 @@
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
+    "signalr": "^2.2.1",
     "systemjs": "0.19.39",
     "zone.js": "^0.6.25"
   },
@@ -46,54 +48,19 @@
     "gulp": "3.9.1",
     "gulp-livereload": "^3.8.1",
     "gulp-typescript": "^2.13.4",
+     "gulp-concat": ">=2.5.2",
+    "gulp-copy": ">=0.0.2",
+    "gulp-cssmin": ">=0.1.7",
+    "gulp-rename": ">=1.2.2",
+    "gulp-rimraf": ">=0.2.0",
+    "gulp-tsc": ">=1.2.0",
+    "gulp-uglify": ">=1.2.0",
     "gulp-watch": "4.3.5",
     "lite-server": "^2.2.2",
+    "jasmine-core": "2.4.1",
+    "tslint": "^3.15.1",
     "merge": "1.2.0",
     "typescript": "^2.0.3",
     "typings": "^1.3.3"
   }
-}
-=======
-    "version": "1.0.0",
-    "name": "photogallery",
-    "author": "Chris Sakellarios",
-    "license": "MIT",
-    "private": true,
-    "dependencies": {
-      "@angular/common": "~2.2.0",
-      "@angular/compiler": "~2.2.0",
-      "@angular/core": "~2.2.0",
-      "@angular/forms": "~2.2.0",
-      "@angular/http": "~2.2.0",
-      "@angular/platform-browser": "~2.2.0",
-      "@angular/platform-browser-dynamic": "~2.2.0",
-      "@angular/router": "~3.2.0",
-      "@angular/upgrade": "~2.2.0",
-
-      "body-parser": "1.14.1",
-      "bootstrap": "3.3.5",
-      "es6-shim": "^0.35.0",
-      "fancybox": "3.0.0",
-      "jquery": "2.1.4",
-
-      "angular-in-memory-web-api": "~0.1.15",
-      "core-js": "^2.4.1",
-      "reflect-metadata": "^0.1.8",
-      "rxjs": "5.0.0-beta.12",
-      "systemjs": "0.19.39",
-      "zone.js": "^0.6.25"
-    },
-    "devDependencies": {
-      "@types/node": "^6.0.45",
-      "del": "2.1.0",
-      "gulp": "3.9.1",
-      "gulp-typescript": "3.1.3",
-      "gulp-watch": "4.3.11",
-      "merge": "1.2.0",
-      "typescript": "^2.0.10",
-      "typings": "^1.3.3"
-    },
-    "scripts": {
-      "postinstall": "typings install"
-    }
 }
