--- a/aspnet5-angular2-typescript/src/PhotoGallery/appsettings.json
+++ b/aspnet5-angular2-typescript/src/PhotoGallery/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "Data": {
     "PhotoGalleryConnection": {
-      "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=PhotoGalery;Trusted_Connection=True;MultipleActiveResultSets=true"
-    }
+      "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=PhotoGalery;Trusted_Connection=True;MultipleActiveResultSets=true"
+	}
   }
 }
