--- a/aspnet5-angular2-typescript/src/PhotoGallery/project.json
+++ b/aspnet5-angular2-typescript/src/PhotoGallery/project.json
@@ -1,4 +1,13 @@
 {
+  "webroot": "wwwroot",
+  "userSecretsId": "TakeTheMessage",
+  "version": "1.1.0-*",
+  "buildOptions": {
+    "debugType": "portable",
+    "emitEntryPoint": true,
+    "preserveCompilationContext": true
+  },
+
   "dependencies": {
     "AutoMapper.Data": "1.0.0-beta1",
     "Microsoft.NETCore.App": "1.1.0",
@@ -26,12 +35,9 @@
     "Microsoft.AspNetCore.Diagnostics": "1.1.0",
     "Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore": "1.1.0",
     "Microsoft.AspNetCore.Identity": "1.1.0",
+    "Microsoft.EntityFrameworkCore.Design": "1.1.0-preview1-final",
     "Microsoft.AspNetCore.Mvc.TagHelpers": "1.1.0",
     "Microsoft.EntityFrameworkCore.SqlServer": "1.1.0",
-    "Microsoft.EntityFrameworkCore.Tools": {
-      "version": "1.0.0-preview2-final",
-      "type": "build"
-    },
     "Microsoft.Extensions.Configuration.UserSecrets": "1.1.0",
     "Microsoft.Extensions.FileProviders.Physical": "1.1.0"
   },
@@ -44,13 +50,8 @@
       "version": "1.0.0-preview2-final",
       "imports": "portable-net45+win8+dnxcore50"
     },
-    "Microsoft.EntityFrameworkCore.Tools": {
-      "version": "1.0.0-preview2-final",
-      "imports": [
-        "portable-net45+win8+dnxcore50",
-        "portable-net45+win8"
-      ]
-    },
+    "Microsoft.EntityFrameworkCore.Tools": "1.1.0-preview4-final",
+    "Microsoft.EntityFrameworkCore.Tools.DotNet": "1.1.0-preview4-final",
     "Microsoft.Extensions.SecretManager.Tools": {
       "version": "1.0.0-preview2-final",
       "imports": "portable-net45+win8+dnxcore50"
@@ -71,8 +72,11 @@
   },
   "frameworks": {
     "netcoreapp1.1": {
+      "dependencies": {
+      },
       "imports": [
         "dotnet5.6",
+        "dnxcore50",
         "portable-net45+win8"
       ]
     }
@@ -102,6 +106,6 @@
     ]
   },
   "tooling": {
-    "defaultNamespace": "LiveGameFeed"
+    "defaultNamespace": "TakeTheMessage"
   }
 }
