--- a/aspnet5-angular2-typescript/src/PhotoGallery/project.json
+++ b/aspnet5-angular2-typescript/src/PhotoGallery/project.json
@@ -68,7 +68,8 @@
     "win10-x64": {},
     "win81-x64": {},
     "win8-x64": {},
-    "win7-x64": {}
+    "win7-x64": {},
+    "win7-x86": {}
   },
   "frameworks": {
     "netcoreapp1.1": {
